--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,10 +3,14 @@
 }
 
 .logo-container {
-    margin-bottom: 1rem;
+    margin-bottom: 30px;
     margin-top: 100px;
 }
 
 .search-results-input {
     margin-top: 1rem;
+}
+
+.rating-container {
+    text-align: center;
 }
