--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -31,20 +31,7 @@
     color: red;
 }
 
-.pagination li {
-    list-style: none;
-}
-
-.pagination {
-    width: 720px
-}
-
-.pdf-page {
-    position: relative;
-    margin: 0 auto 3em auto;
-    padding: 0;
-    overflow: visible;
-    background-clip: content-box;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.54);
-    background-color: white;
+.pdf-frame {
+    width: 100%;
+    height: 80vh;
 }
